# rustic_server

./: .gitignore  .justfile  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  USAGE.md  build-dependencies.just  cliff.toml  committed.toml  deny.toml  dist-workspace.toml  dprint.json  maskfile.md  release-plz.toml  release.toml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  compat.yml  cross-ci.yml  nightly.yml  prebuilt-pr.yml  release-cd.yaml  release-cd.yml  release-ci.yml  release-image.yml  release-plz.yml  release-pr.yaml  release-pr.yml  release.yaml  release.yml  release_check.yml  release_pr.yaml
config/: README.md  acl.example.toml  rustic_config.toml  rustic_profile.toml  rustic_server.toml
containers/: Dockerfile  docker-compose.yml
doc/: readme.md
docs/: readme.md
src/: acl.rs  application.rs  auth.rs  commands.rs  config.rs  context.rs  error.rs  handlers.rs  helpers.rs  htaccess.rs  htpasswd.rs  lib.rs  log.rs  main.rs  prelude.rs  server_config.rs  state.rs  storage.rs  test_helpers.rs  test_server.rs  testing.rs  typed_path.rs  web.rs
src/commands/: auth.rs  config.rs  mod.rs  serve.rs
src/config/: auth_config.rs  auth_file.rs  configurator.rs  mod.rs  server.rs  server_config.rs
src/handlers/: __mod.rs  access_check.rs  file_config.rs  file_exchange.rs  file_helpers.rs  file_length.rs  files_list.rs  health.rs  list_files.rs  mod.rs  path_analysis.rs  ranged_stream.rs  repository.rs
src/snapshots/: rustic_server__acl__tests__acl_default_impl.snap  rustic_server__acl__tests__repo_acl_passes.snap  rustic_server__config__test__config_parsing_from_file_passes.snap  rustic_server__config__test__default_config_passes.snap  rustic_server__config__test__file_read.snap  rustic_server__config__test__file_read.snap.new  rustic_server__config__test__issue_60_parse_config_passes.snap  rustic_server__config__test__optional_explicit_parse_config_passes.snap  rustic_server__config__test__optional_implicit_parse_config_passes.snap  rustic_server__config__test__parse_config_passes.snap  rustic_server__htpasswd__test__htpasswd_passes.snap
test_data/: README.md  acl.toml  rustic_server.toml  test.toml
tests/: acceptance.rs  endpoints.hurl  integration.rs  test_server.rs
tests/fixtures/hurl/: endpoints.hurl
tests/fixtures/test_data/: .htpasswd  README.md  acl.toml  htaccess  rustic.toml  rustic_server.toml  server_acl_minimal.toml
tests/fixtures/test_data/certs/: test.crt  test.key
tests/fixtures/test_data/test_repo_source/: my_file.html
tests/fixtures/test_data/test_repo_source/my_folder/: my_file.html  my_file.txt
tests/fixtures/test_data/test_repos/test_repo/: config
tests/integration/: _impl.rs  acceptance.rs  config.rs  main.rs
tide-http-auth/: Cargo.toml
wix/: main.wxs
