[package]
name = "rustic_server"
version = "0.1.0"
authors = ["Alexander Weiss <alex@weissfam.de>"]
categories = ["command-line-utilities"]
edition = "2021"
homepage = "https://rustic.cli.rs/"
keywords = ["backup", "restic", "deduplication", "encryption", "cli", "server"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/rustic-rs/rustic_server"
description = """
rustic server - a REST server built in rust to use with rustic and restic.
"""

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
axum = { version = "0.7.3", features = ["tracing", "multipart", "http2"] }
axum-auth = "0.7.0"
axum-extra = { version = "0.9.1", features = ["typed-header", "query", "async-read-body"] }
axum-macros = "0.4.0"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
clap = { version = "4.4.2", features = ["derive"] }
enum_dispatch = "0.3.12"
futures-util = "0.3.28"
htpasswd-verify = "0.3"
http-range = "0.1"
serde = "1"
serde_derive = "1"
thiserror = "1.0.48"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io-util"] }
toml = "0.8.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
