[package]
name = "rustic_server"
version = "0.1.1"
authors = ["the rustic-rs team"]
categories = ["command-line-utilities"]
edition = "2021"
homepage = "https://rustic.cli.rs/"
include = [
  "src/**/*",
  "config/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE",
  "README.md",
]
keywords = ["backup", "restic", "cli", "server"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/rustic-rs/rustic_server"
rust-version = "1.70.0"
description = """
rustic server - a REST server built in rust to use with rustic and restic.
"""
# cargo-binstall support
# https://github.com/cargo-bins/cargo-binstall/blob/HEAD/SUPPORT.md
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ repo }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tar.gz"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWSWSCEJEEacVeCy0va71hlrVtiW8YzMzOyJeso0Bfy/ZXq5OryWi/8T"

[package.metadata.wix]
upgrade-guid = "EE4ED7D1-CE20-4919-B988-33482C0C3042"
path-guid = "F5605741-D1CF-45E2-B082-3A71B58C01C8"
license = false
eula = false

[dependencies]
abscissa_tokio = "0.8.0"
anyhow = "1"
async-trait = "0.1"
# FIXME: Add "headers" feature to Axum?
axum = { version = "0.7", features = ["tracing", "multipart", "http2"] }
axum-auth = "0.7"
axum-extra = { version = "0.9", features = ["typed-header", "query", "async-read-body", "typed-routing"] }
axum-macros = "0.4"
axum-range = "0.4"
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4", features = ["derive"] }
conflate = "0.3.1"
displaydoc = "0.2"
# enum_dispatch = "0.3.12"
futures = "0.3"
futures-util = "0.3"
htpasswd-verify = "0.3"
http-body-util = "0.1"
http-range = "0.1"
inquire = "0.7"
pin-project = "1"
rand = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_derive = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dependencies.abscissa_core]
version = "0.8.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dependencies.rustls]
version = "0.23.16"
features = ["logging", "std", "tls12"]
default-features = false

[dev-dependencies]
abscissa_core = { version = "0.8.1", features = ["testing"] }
anyhow = "1"
assert_cmd = "2"
base64 = "0.22"
dircmp = "0.2"
insta = { version = "1", features = ["redactions", "ron"] }
once_cell = "1.2"
pretty_assertions = "1"
rstest = "0.23"
# reqwest = "0.11.18"
# serial_test = "*"
serde_json = "1"
tower = "0.5"

# see: https://nnethercote.github.io/perf-book/build-configuration.html
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

# compile dependencies with optimizations in dev mode
# see: https://doc.rust-lang.org/stable/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
strip = true
panic = "abort"

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
